# infantnetwork

./: .gitignore  CITATION.cff  LICENSE  README.MD  README.md  compute_infant.py  compute_network.py  example_networks.ipynb  network.yml  pyproject.toml  setup.cfg  setup.py
LICENSE/: LICENSE  LICENSE_arnie  README.md
LICENSES/: README.md
data/: les_miserables.csv  sample_network.csv
infantnetwork/: ComputeNetworkMetrics.py  __init__.py  computeNetwork.py  network_parameters_and_data.py
infantnetwork/tests/: test_computeNetwork.py
